# sqs-consumer

./: README.md  pyproject.toml  test.sh
.github/workflows/: build.yml  pr.yml
sqs_consumer/: __init__.py
test/: test_consumer.py
