[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sqs_consumer"
module-root = ""

[project]
name = "sqs-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.12",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
check-ready="sqs_consumer:check_ready"
check-health="sqs_consumer:check_health"


[tool.pyright]
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "boto3-stubs[sqs]>=1.39.14",
    "freezegun>=1.5.3",
    "moto[sqs]>=5.1.8",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]
